--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <nav>
+    <nav class="nav">
         <div class="logo">HO HO HO</div>
         <div class="nav-items">
             <a href="">Home</a>
@@ -25,6 +25,15 @@
             <img src="hohoho.png" alt="santa" class="hero-image">
         </div>
     </section>
+    <footer>
+        <div id="footer">
+            <div class="nav-items">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
